# ros_kinfu_solo

./: CMakeLists.txt  README.md  package.xml
launch/: start.launch
src/: ros_kinfu_solo_node.cpp
